Fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -370,7 +370,8 @@ ul, ol {
   }
 
   pre {
-    margin: 0 -0.5rem;
+    margin-left: -0.5rem;
+    margin-right: -0.5rem;
   }
 
   ul, ol {
